添加controller,service,mapper三层,目前有问题待解决

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <div>
         <img src="/img/test.png">
     </div>
-    <th>hello friend</th>
+    <th>hello</th>
     <table>
         <th>测试List</th>
         <tr th:each="l:${list}">
